# Vulkan-3D-Graphics-Engine

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  CMakeLists.txt  CROSS-PLATFORM-MIGRATION.md  FEATURE.md  README.md  REFACTOR.md  RENDERER-EXPANSION.md  SCENE-GRAPH.md  imgui.ini
dep/: CMakeLists.txt
docs/: ARCHITECTURE-AUDIT.md  ARCHITECTURE.md  AUDIT.md  LIGHTING.md  OPTIMIZATION.md  PHASE-1-ROADMAP.md  RENDER-GRAPH.md  SVO-PHASE-1.md  UI.md  VISION.md  VOX-INTEGRATION.md  animated-voxel-import.md  build-versioning.md  instanced.md  island-scene.md  migrate-animated-format.md  multisample-color.md  vee_spec.docx
lib/: CMakeLists.txt
lib/VWrap/include/: Buffer.h  CommandBuffer.h  ComputePipeline.h  Device.h  FrameController.h  Image.h  ImageView.h  Instance.h  OffscreenTarget.h  PhysicalDevice.h  Pipeline.h  PipelineLayout.h  RenderPass.h  Sampler.h  Utils.h  VulkanContext.h
lib/VWrap/src/: Buffer.cpp  CommandBuffer.cpp  ComputePipeline.cpp  Device.cpp  FrameController.cpp  Image.cpp  ImageView.cpp  Instance.cpp  OffscreenTarget.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  Sampler.cpp  Swapchain.cpp  VulkanContext.cpp
shaders/: CMakeLists.txt  animated_geometry_generate.comp  animated_geometry_trace.frag  animated_geometry_trace.vert  bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  brickmap_build.comp  brickmap_generate.comp  brickmap_palette_build.comp  brickmap_palette_generate.comp  brickmap_trace.frag  (+27 more)
src/: AppEvent.h  Application.cpp  Application.h  CMakeLists.txt  Camera.h  CameraController.cpp  CameraController.h  GPUProfiler.h  GUIRenderer.cpp  GUIRenderer.h  ImGuiLogSink.h  Log.cpp  Log.h  MeshRasterizer.cpp  MeshRasterizer.h  OctreeTracer.cpp  OctreeTracer.h  OffscreenTarget.cpp  OffscreenTarget.h  RenderTechnique.h  ShaderCompiler.h  UIStyle.h  VulkanContext.h  Window.cpp  Window.h  config.h.in  main.cpp
src/capture/: CaptureSystem.cpp  CaptureSystem.h  CaptureTypes.h  StillEncoder.cpp  StillEncoder.h  VideoEncoder.cpp  VideoEncoder.h
src/editor/: Editor.cpp  Editor.h  GUIRenderer.cpp  GUIRenderer.h  ImGuiLogSink.h  Inspectable.h  UIState.h  UIStyle.cpp  UIStyle.h  Workspace.h
src/editor/panels/: BakerPanel.cpp  BakerPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MemoryPanel.cpp  MemoryPanel.h  MetricsPanel.cpp  MetricsPanel.h  OutputPanel.cpp  OutputPanel.h  PerformancePanel.cpp  PerformancePanel.h  RenderGraphPanel.cpp  RenderGraphPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/import/: AnimationBaker.cpp  AnimationBaker.h  AnimationEvaluator.cpp  AnimationEvaluator.h  GltfLoader.cpp  GltfLoader.h  MeshIR.h  PaletteQuantizer.cpp  PaletteQuantizer.h  VoxAnimFormat.cpp  VoxAnimFormat.h  VoxelColorSampler.cpp  VoxelColorSampler.h  Voxelizer.cpp  Voxelizer.h
src/panels/: InspectorPanel.h  MetricsPanel.cpp  OutputPanel.cpp  PerformancePanel.cpp  PerformancePanel.h  RendererManagerPanel.cpp  RendererManagerPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/rendering/: AssetRegistry.cpp  AssetRegistry.h  BindingTable.cpp  BindingTable.h  ComputePassBuilder.cpp  ComputePassBuilder.h  ComputeTest.cpp  ComputeTest.h  DAGBuilder.cpp  DAGBuilder.h  DescriptorSetBuilder.cpp  DescriptorSetBuilder.h  FullscreenPass.cpp  FullscreenPass.h  GraphicsPassBuilder.cpp  GraphicsPassBuilder.h  MeshRasterizer.cpp  MeshRasterizer.h  PassBuilderBase.h  PassDAG.cpp  PassDAG.h  PipelineDefaults.h  RenderGraph.cpp  RenderGraph.h  RenderGraphTypes.h  RenderItem.cpp  RenderItem.h  RenderScene.h  RenderTechnique.h  Renderer.cpp  Renderer.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  SceneExtractor.cpp  SceneExtractor.h  SceneLighting.h  SkinnedMeshAsset.h  SkyDescription.h
src/rendering-techniques/: RenderTechnique.h
src/rendering-techniques/animated-geometry/: AnimatedGeometryRenderer.cpp  AnimatedGeometryRenderer.h
src/rendering-techniques/brickmap/: BrickmapRenderer.cpp  BrickmapRenderer.h
src/rendering-techniques/brickmap-palette/: BrickmapPaletteRenderer.cpp  BrickmapPaletteRenderer.h  VoxLoader.cpp  VoxLoader.h
src/rendering-techniques/combined/: CombinedRenderer.cpp  CombinedRenderer.h
src/rendering-techniques/compute-test/: ComputeTest.cpp  ComputeTest.h
src/rendering-techniques/gltf-import/: GltfImportTechnique.cpp  GltfImportTechnique.h
src/rendering-techniques/instanced-voxel/: InstancedVoxelTechnique.cpp  InstancedVoxelTechnique.h  Substrate.cpp  Substrate.h
src/rendering-techniques/mesh-rasterizer/: MeshRasterizer.cpp  MeshRasterizer.h
src/rendering-techniques/svo/: SVORenderer.cpp  SVORenderer.h
src/rendering-techniques/svo-backup/: SVOBackup.cpp  SVOBackup.h
src/rendering-techniques/voxel/: BrickVolume.h  DDATracer.cpp  DDATracer.h
src/rendering/post-process/: BloomEffect.cpp  BloomEffect.h  LensFlareEffect.cpp  LensFlareEffect.h  PostProcessChain.cpp  PostProcessChain.h  PostProcessEffect.h
src/rendering/primitives/: PrimitiveFactory.cpp  PrimitiveFactory.h
src/rendering/voxel/: BrickGrid.h  BrickVolume.cpp  Brickmap.h  DDATracer.cpp  DDATracer.h  DefaultPalette.cpp  DefaultPalette.h  DefaultVoxPalette.cpp  DefaultVoxPalette.h  PaletteResource.cpp  PaletteResource.h  ShadowBrickmap.cpp  ShadowBrickmap.h  Substrate.cpp  Substrate.h  VoxLoader.cpp  VoxLoader.h
src/utils/: EnginePaths.cpp  EnginePaths.h  FileDialog.h  FileDialog.mm  GPUProfiler.h  ScreenshotCapture.cpp  ScreenshotCapture.h  ShaderCompiler.cpp  VkFormatString.h
(+9 files in other folders)
